--- a/archivo.html
+++ b/archivo.html
@@ -4,7 +4,10 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Aqui vamos a hacer un blog del post</h1>
+        <div id="container">
+            <h1>Aqui vamos a hacer un blog del post</h1>
         <p>es un parrafo de inicio</p>
+        </div>
+        
     </body>
 </html>
