--- a/archivo.html
+++ b/archivo.html
@@ -4,9 +4,15 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <div id="container">
-            <h1>Aqui vamos a hacer un blog del post</h1>
-        <p>es un parrafo de inicio</p>
+        <div id="container">            
+            <div id="cabecera">
+                CABECERA
+            </div>
+            <div id="post">
+                <h1>Aqui vamos a hacer un blog del post</h1>
+                <p>es un parrafo de inicio</p>
+            </div>
+            
         </div>
         
     </body>
