--- a/archivo.html
+++ b/archivo.html
@@ -6,7 +6,10 @@
     <body>
         <div id="container">            
             <div id="cabecera">
-                CABECERA
+                Hyperblog
+                <span id="tagline">
+                    Tu blog de confianza
+                </span> 
             </div>
             <div id="post">
                 <h1>Aqui vamos a hacer un blog del post</h1>
