Agregado el contenido adicional del blog y una mejor tipografia

--- a/archivo.html
+++ b/archivo.html
@@ -7,6 +7,9 @@
         <div id="container">
             <h1>Aqui vamos a hacer un blog del post</h1>
         <p>es un parrafo de inicio</p>
+        <p>es un parrafo de inicio
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quod, laboriosam distinctio error quas mollitia numquam! Repellendus, rerum architecto. Dolores eos aliquid ab officiis in eveniet quam inventore dicta saepe.            
+        </p>
         </div>
         
     </body>
