Agregue suscripcion, cambie la cabecera maestra y puse todo azul

--- a/archivo.html
+++ b/archivo.html
@@ -4,27 +4,21 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-<<<<<<< HEAD
-        <div id="container">
-            <h1>Aqui vamos a hacer un blog del post</h1>
-        <p>es un parrafo de inicio</p>
-        <p>es un parrafo de inicio
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quod, laboriosam distinctio error quas mollitia numquam! Repellendus, rerum architecto. Dolores eos aliquid ab officiis in eveniet quam inventore dicta saepe.            
-        </p>
-=======
         <div id="container">            
             <div id="cabecera">
                 Hyperblog
                 <span id="tagline">
-                    Tu blog de confianza
+                    Tu blog de maestro
                 </span> 
             </div>
             <div id="post">
                 <h1>Aqui vamos a hacer un blog del post</h1>
-                <p>es un parrafo de inicio</p>
+                <p>es un parrafo de inicio
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore itaque eveniet, earum qui esse doloremque pariatur sapiente fuga deserunt ipsum beatae unde debitis, at et labore! Nemo inventore fugiat animi?
+                </p>
+                <p>Suscríbete y dale like</p>
             </div>
             
->>>>>>> cabecera
         </div>
         
     </body>
