--- a/archivo.html
+++ b/archivo.html
@@ -13,8 +13,8 @@
                 </span> 
             </div>
             <div id="post">
-                <h1>Aqui vamos a hacer un blog del post</h1>
-                <p>es un parrafo de inicio
+                <h1>Aquí vamos a hacer un blog del post</h1>
+                <p>Es un párrafo de inicio
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore itaque eveniet, earum qui esse doloremque pariatur sapiente fuga deserunt ipsum beatae unde debitis, at et labore! Nemo inventore fugiat animi?
                 </p>
                 <p>Suscríbete y dale like</p>
